<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FYPapp</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">AxsDocs</string>
	<string name="preferences">Set Preferences Screen</string>
	
	<string name="text_butt_take_photo">Take Photo</string>
	<string name="text_butt_gallery">Gallery</string>
	
	<string name="menu_option_sample">View Sample Text</string>
	<string name="menu_option_settings">Display Settings</string>
	<string name="menu_option_home">Home</string>
	<string name="menu_option_help">Help</string>
	
	<string name="cont_desc_help_butt">Press for help on using the app</string>
	<string name="cont_desc_gallery_butt">Press to choose an image from your gallery</string>
	<string name="cont_desc_take_photo_butt">Press to capture an image</string>
	<string name="cont_desc_progress_bar">Please wait. Image is currently uploading. A progress bar is shown on screen</string>

</resources>